--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "event-emitter-mixin": "^1.0.1",
     "mixwith": "^0.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "commitizen": "^4.2.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^4.3.0",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm i --prefer-offline --no-audit"
   },
   "repository": {
     "type": "git",
@@ -23,5 +30,16 @@
   "bugs": {
     "url": "https://github.com/gryphonmyers/feed-aggregator/issues"
   },
-  "homepage": "https://github.com/gryphonmyers/feed-aggregator#readme"
+  "homepage": "https://github.com/gryphonmyers/feed-aggregator#readme",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  }
 }
